<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="idi.acedo.joel.ventadeentradas.SobreTakitea"
    tools:showIn="@layout/activity_sobre_takitea">

    <TextView
        android:id="@+id/title_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="40dp"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/info_about"
        android:layout_below="@+id/title_about"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/info_takitea"
        android:textColor="@color/textSecondary"/>

    <TextView
        android:id="@+id/contact_about"
        android:layout_below="@+id/info_about"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/contact"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/name_about"
        android:layout_below="@+id/contact_about"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/joel_nom"
        android:textColor="@color/textSecondary"/>

    <TextView
        android:id="@+id/email_about"
        android:layout_below="@+id/name_about"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/joel_email"
        android:textColor="@color/textSecondary"/>

</RelativeLayout>
