<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="idi.acedo.joel.ventadeentradas.ConfirmActivity"
    tools:showIn="@layout/activity_confirm">

    <TextView
        android:id="@+id/total_confirm"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="90dp"
        android:textSize="32dp"
        android:textColor="@color/textSecondary"
        android:text="Total:"/>

    <TextView
        android:id="@+id/total_euro_confirm"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:textSize="32dp"
        android:textColor="@color/colorAccent"
        android:text="20.14 €"/>

    <TextView
        android:id="@+id/asientos_confirm"
        android:layout_below="@+id/total_confirm"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:textColor="@color/textSecondary"
        android:text="Seients: "/>

    <TextView
        android:id="@+id/asientos_num_confirm"
        android:layout_below="@+id/total_euro_confirm"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_width="225dp"
        android:textAlignment="textEnd"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:textSize="24dp"
        android:textColor="@color/colorAccent"
        android:text="25, 30, 5"/>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/asientos_num_confirm"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_add">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nom_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/name_add"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_add">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/confirm_buy"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textSize="22dp"
        style="@style/Widget.AppCompat.Button.Colored" />

</RelativeLayout>
